--- a/index.html
+++ b/index.html
@@ -1646,6 +1646,7 @@ nav {
   opacity: 1;
 }
 
+
   </style>
     <link rel="stylesheet" href="assets/css/responsive.css">\n</head>
 <body>
@@ -1653,11 +1654,11 @@ nav {
     <div id="particles-js"></div>
     <div class="fixed-image">
       <img id="fixed-image" src="assets/img/your-image.png" alt="Repulse Center Image" />
-      <div class="overlay-text">ï¼¤ ï¼¥ ï¼¬ ï¼´ ï¼¡</div>
+      <div class="overlay-text">ＤＥＬＴＡ</div>
       <div class="subtext1">CHANGE IS THE ONLY CONSTANT</div>
       <a href="https://forms.gle/YOUR_FORM_LINK" target="_blank" class="ticket-button">Book Your Tickets</a>
     </div>
-    <nav>\n    <button class="mobile-menu" aria-label="Open menu">â˜°</button>
+    <nav><button class="mobile-menu" aria-label="Open menu"></button>
       <div class="nav-container">
         <a href="index.html" class="logo-wrapper">
           <img src="assets/img/tedx-logo.png" alt="TEDxJNTU Hyderabad Logo" class="logo" />
@@ -1899,7 +1900,7 @@ particlesJS.load("particles-js", configFile, function () {
         <div class="footer-delta">
           <div class="delta-logo-wrapper">
             <img src="assets/img/your-image.png" alt="Delta Logo" class="delta-icon" />
-            <span class="delta-text">ï¼¤ï¼¥ï¼¬ï¼´ï¼¡</span>
+            <span class="delta-text">ＤＥＬＴＡ</span>
           </div>
         </div>        
       </div>
