--- a/team.html
+++ b/team.html
@@ -1,1 +1,127 @@
-\n<link rel="stylesheet" href="assets/css/responsive.css">\n<script src="assets/js/responsive.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>Our Team - TEDxJNTU Hyderabad</title>
+	<link rel="icon" href="assets/img/favicon.png" type="image/png" />
+
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="assets/css/style.css" />
+	<link rel="stylesheet" href="assets/css/responsive.css" />
+	<link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
+
+	<style>
+	/* Make team page match admin page cards */
+	.admin-section {
+		text-align: center;
+		padding: 120px 20px 60px;
+		color: white;
+		background:black;
+	}
+
+	.admin-grid {
+		display: grid;
+		grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+		gap: 40px;
+		max-width: 1200px;
+		margin: auto;
+		margin-top: 50px;
+	}
+
+	.admin-card {
+		background: #0d0d0d;
+		padding: 20px;
+		border-radius: 10px;
+		transition: transform 0.3s ease;
+	}
+
+	.admin-card:hover {
+		transform: translateY(-5px);
+	}
+
+	.imgwrap {
+		width: 100%;
+		height: 300px;
+		overflow: hidden;
+		border-radius: 10px;
+		background: #111;
+	}
+
+	.imgwrap img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+
+	.admin-card h3 {
+		color: white;
+		margin-top: 15px;
+		font-size: 20px;
+	}
+
+	.admin-card .role {
+		color: #cccccc;
+		font-size: 16px;
+	}
+	</style>
+</head>
+<body>
+
+	<section class="admin-section" data-aos="fade-up">
+		<h2 style="color:#eb0028;font-size:50px;font-weight:800;">Our Team</h2>
+		<p class="lead">Meet the students who make TEDxJNTU Hyderabad possible.</p>
+
+		<div class="admin-grid team-grid">
+			<!-- Dynamically filled by JS -->
+		</div>
+
+		<p style="margin-top:18px;color:#666;font-size:0.9rem;">
+			Images are loaded directly from Google Drive (public links).
+		</p>
+	</section>
+
+	<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+	<script src="assets/js/responsive.js"></script>
+
+	<script>
+	(async function(){
+		const grid = document.querySelector('.team-grid');
+		let team = null;
+
+		// Load team.json
+		try {
+			const res = await fetch("data/team.json", {cache: "no-store"});
+			if(res.ok) team = await res.json();
+		} catch(err){
+			console.error("Failed to load team.json", err);
+		}
+
+		if(!team){
+			grid.innerHTML = "<p>Error loading team data.</p>";
+			return;
+		}
+
+		team.forEach(member => {
+			const card = document.createElement("div");
+			card.className = "admin-card";
+			card.setAttribute("data-aos","zoom-in");
+
+			card.innerHTML = `
+				<div class="imgwrap">
+					<img src="${member.img}" alt="${member.name}">
+				</div>
+				<h3>${member.name}</h3>
+				<p class="role">${member.role}</p>
+			`;
+
+			grid.appendChild(card);
+		});
+
+		AOS.init();
+	})();
+	</script>
+
+</body>
+</html>
