--- a/index.html
+++ b/index.html
@@ -1962,7 +1962,7 @@ particlesJS.load("particles-js", configFile, function () {
         </div>
       </div>
       <p class="footer-credit">
-        Â© Copyright 2025 TEDxJNTU Hyderabad. This is an independent event under license from TED.
+        Â© Copyright 2025 TEDxJNTU Hyderaabad. This is an independent event under license from TED.
         Learn more <a href="https://www.ted.com/participate/organize-a-local-tedx-event/before-you-start/what-is-a-tedx-event" target="_blank" style="color: #eb0028; text-decoration: underline;">here</a>.
       </p>
   </footer>  
